fix Chatroom not responsive  #200

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -10622,7 +10622,7 @@ ul.payment-methods {
   margin-top: 140px;
 }
 .layout-portal .view-brand-signup {
-  margin-top: 50px;
+  margin-top: 60px;
 }
 .layout-portal .view-brand-signup .info-text a {
   color: #8692a8;
