--- a/app/less/_viewport.less
+++ b/app/less/_viewport.less
@@ -13,7 +13,7 @@
     margin-top: 140px;
   }
   .view-brand-signup{
-    margin-top: 50px;
+    margin-top: 60px;
     .info-text{
       a{
         color: @color-grey-darker;
